<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClassList">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="296dp"
        android:layout_marginTop="616dp"
        android:text="@string/txtNext"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/PhoneHint"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Switch
        android:id="@+id/swDegreeCert"
        android:layout_width="359dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="116dp"
        android:layout_marginRight="8dp"
        android:checked="true"
        android:switchMinWidth="350dp"
        android:textOff="@string/cert"
        android:textOn="@string/twoYr"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDay"
        tools:checked="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="52dp"
        android:text="@string/twoYr"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/txtYear" />

    <EditText
        android:id="@+id/txtDay"
        android:layout_width="62dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/txtDay"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toRightOf="@+id/spnMonth"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:text="@string/FirstName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="212dp"
        android:entries="@array/Month"
        app:layout_constraintLeft_toRightOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="52dp"
        android:text="@string/LastName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginTop="560dp"
        android:text="@string/txtMajor"
        app:layout_constraintLeft_toLeftOf="@+id/spnDegree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="212dp"
        android:ems="10"
        android:hint="@string/txtYear"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toRightOf="@+id/txtDay"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnCertificate"
        android:layout_width="163dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="496dp"
        android:entries="@array/lstCertificate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/LastNameHint"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="167dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/FirstNameHint"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/cert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/Phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="76dp"
        android:text="@string/txtBday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/lblCertificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="560dp"
        android:text="@string/cert"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spnDegree"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_marginTop="496dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/lstMajor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>